Add claude mcp add CLI command to MCP setup section
Provide a one-liner CLI alternative for registering the MCP server
with Claude Code, including database environment variables.